// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages About 1`] = `
<div
  class="about"
>
  <svg
    class="logo"
  />
   
  <p>
    <span
      class="version"
    >
      
      commit
      
      <a
        href="https://github.com/aeternity/superhero-wallet/commit/a1c1c5acc851c49248aad87088963f9ae5fb200e"
        target="_blank"
      >
        
        a1c1c5a
      </a>
      
      / version-specific-text
    
    </span>
  </p>
   
  <hr />
   
  <div
    class="waellet-links"
  >
    <a
      href="https://superhero.com/faq"
      target="_blank"
    >
      FAQ
    </a>
     
    <router-link-stub
      data-cy="terms"
      to="/about/termsOfService"
    >
      
      locale-specific-text
    
    </router-link-stub>
     
    <router-link-stub
      data-cy="privacy"
      to="/about/privacyPolicy"
    >
      
      locale-specific-text
    
    </router-link-stub>
     
    <a
      class="button primary"
      href="https://thesuperherowallet.typeform.com/to/vh8Ffu"
      target="_blank"
    >
      
      locale-specific-text
    
    </a>
  </div>
</div>
`;

exports[`Pages Index 1`] = `
<div
  class="index new-ui"
>
  <div
    class="not-iframe"
  >
    <svg />
     
    <div
      class="heading"
    >
      <!---->
    </div>
     
    <div
      class="platforms new-ui agreed"
    >
      <div
        class="heading"
      >
        
          locale-specific-text
        
      </div>
       
      <div
        class="web-icons"
      >
        <div
          class="extension"
        >
          <div>
            
        locale-specific-text
      
          </div>
           
          <div>
            <a
              href="https://addons.mozilla.org/en-US/firefox/addon/superhero-wallet"
              target="_blank"
            >
              <img
                alt="Firefox"
                class="grey"
                src="../../../icons/platforms/firefox.svg"
              />
            </a>
             
            <a
              href="https://chrome.google.com/webstore/detail/superhero/mnhmmkepfddpifjkamaligfeemcbhdne"
              target="_blank"
            >
              <img
                alt="Chrome"
                class=""
                src="../../../icons/platforms/chrome.svg"
              />
            </a>
          </div>
        </div>
         
        <div
          class="mobile-app"
        >
          <div>
            
        locale-specific-text
      
          </div>
           
          <div>
            <a
              href="https://apps.apple.com/us/app/superhero-wallet/id1502786641"
              target="_blank"
            >
              <img
                alt="App Store"
                class="grey"
                src="../../../icons/platforms/app-store.svg"
              />
            </a>
             
            <a
              href="https://play.google.com/store/apps/details?id=com.superhero.cordova"
              target="_blank"
            >
              <img
                alt="Google Play"
                class="grey"
                src="../../../icons/platforms/google-play.svg"
              />
            </a>
          </div>
        </div>
      </div>
       
      <div
        class="footer"
      >
        
          locale-specific-text
        
      </div>
    </div>
  </div>
   
  <div
    class="terms-agreement"
  >
    <label
      class="checkbox-container agreed"
      data-cy="checkbox"
    >
      <input
        name=""
        type="checkbox"
        value="true"
      />
       
      <span
        class="checkmark checked"
      />
       
      <span>
        
        locale-specific-text
      
      </span>
    </label>
     
    <a
      class="terms-of-use agreed"
      data-cy="terms"
      href="https://wallet.superhero.com/about/termsOfService"
    >
      
      locale-specific-text
    
    </a>
  </div>
   
  <div
    class="wallet-button-box"
  >
    <button
      class="button button-subheader alternative extend new-ui"
      data-cy="generate-wallet"
      style=""
      to=""
    >
      <div
        class="box"
      >
        <span
          class="icon"
        >
          <svg />
        </span>
         
        <div
          class="message"
        >
          <span
            class="heading"
          >
            locale-specific-text
          </span>
           
          <span
            class="description"
          >
            locale-specific-text
          </span>
        </div>
      </div>
    </button>
     
    <button
      class="button button-subheader alternative extend new-ui"
      data-cy="import-wallet"
      style=""
      to=""
    >
      <div
        class="box"
      >
        <span
          class="icon"
        >
          <svg />
        </span>
         
        <div
          class="message"
        >
          <span
            class="heading"
          >
            locale-specific-text
          </span>
           
          <span
            class="description"
          >
            locale-specific-text
          </span>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Pages Index 2`] = `
<div
  class="index new-ui"
>
  <div
    class="not-iframe"
  >
    <svg />
     
    <div
      class="heading"
    >
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="terms-agreement"
  >
    <label
      class="checkbox-container agreed"
      data-cy="checkbox"
    >
      <input
        name=""
        type="checkbox"
        value="true"
      />
       
      <span
        class="checkmark checked"
      />
       
      <span>
        
        locale-specific-text
      
      </span>
    </label>
     
    <a
      class="terms-of-use agreed"
      data-cy="terms"
      href="https://wallet.superhero.com/about/termsOfService"
    >
      
      locale-specific-text
    
    </a>
  </div>
   
  <div
    class="wallet-button-box"
  >
    <button
      class="button button-subheader alternative extend new-ui"
      data-cy="generate-wallet"
      style=""
      to=""
    >
      <div
        class="box"
      >
        <span
          class="icon"
        >
          <svg />
        </span>
         
        <div
          class="message"
        >
          <span
            class="heading"
          >
            locale-specific-text
          </span>
           
          <span
            class="description"
          >
            locale-specific-text
          </span>
        </div>
      </div>
    </button>
     
    <button
      class="button button-subheader alternative extend new-ui"
      data-cy="import-wallet"
      style=""
      to=""
    >
      <div
        class="box"
      >
        <span
          class="icon"
        >
          <svg />
        </span>
         
        <div
          class="message"
        >
          <span
            class="heading"
          >
            locale-specific-text
          </span>
           
          <span
            class="description"
          >
            locale-specific-text
          </span>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Pages Index 3`] = `
<div
  class="index new-ui"
>
  <img
    src="../../../icons/iframe/sendAndReceive.svg"
  />
   
  <div
    class="terms-agreement"
  >
    <label
      class="checkbox-container agreed"
      data-cy="checkbox"
    >
      <input
        name=""
        type="checkbox"
        value="true"
      />
       
      <span
        class="checkmark checked"
      />
       
      <span>
        
        locale-specific-text
      
      </span>
    </label>
     
    <a
      class="terms-of-use agreed"
      data-cy="terms"
      href="https://wallet.superhero.com/about/termsOfService"
    >
      
      locale-specific-text
    
    </a>
  </div>
   
  <div
    class="wallet-button-box"
  >
    <button
      class="button button-subheader alternative extend new-ui"
      data-cy="generate-wallet"
      style=""
      to=""
    >
      <div
        class="box"
      >
        <span
          class="icon"
        >
          <svg />
        </span>
         
        <div
          class="message"
        >
          <span
            class="heading"
          >
            locale-specific-text
          </span>
           
          <span
            class="description"
          >
            locale-specific-text
          </span>
        </div>
      </div>
    </button>
     
    <button
      class="button button-subheader alternative extend new-ui"
      data-cy="import-wallet"
      style=""
      to=""
    >
      <div
        class="box"
      >
        <span
          class="icon"
        >
          <svg />
        </span>
         
        <div
          class="message"
        >
          <span
            class="heading"
          >
            locale-specific-text
          </span>
           
          <span
            class="description"
          >
            locale-specific-text
          </span>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Pages PrivacyPolicy 1`] = `
<div
  class="privacy-policy"
>
  <h2>
    locale-specific-text
  </h2>
   
  <p>
    <em>
      The present Privacy Policy is effective since on 9th April 2020.
    </em>
  </p>
   
  <ol
    class="policy-list"
  >
    <li
      class="first"
    >
      <h3>
        <strong>
          Introduction
        </strong>
      </h3>
       
      <p>
        <strong>
          Superhero.com Establishment (“Superhero”, “we”,
          “us”, “our” 
        </strong>
        or
        <strong>
           “the company”
        
        </strong>
        ) is a company with seat and registered
        address at: Dr. Grass Str. 12, 9490 Vaduz, Liechtenstein, with email address for
        communication related to the 
        <strong>
          Superhero Wallet
        </strong>
        :
        superherowallet@protonmail.com. 
        <strong>
          Superhero
        </strong>
         is the company, which created
        and developed 
        <strong>
          Superhero Wallet
        </strong>
        .
      
      </p>
       
      <p>
        <strong>
          Superhero 
        </strong>
        takes your privacy and the security of your information as a
        
        <strong>
          USER
        </strong>
         very seriously.   
      
      </p>
       
      <p>
        
        This 
        <strong>
          Privacy Policy
        </strong>
         (“
        <strong>
          Policy
        </strong>
        ”) is applicable
        for the 
        <strong>
          Superhero 
        </strong>
        developed software program
        
        <strong>
          Superhero Wallet (
        </strong>
        the
        
        <strong>
          “Wallet” 
        </strong>
        or the
        
        <strong>
          “application”), 
        </strong>
        designed for end users, which allows
        supporters to send value to content creators, causes, charities, groups or regular
        individuals online as a reward for contributing accurate information, relevant insights,
        quality content. The 
        <strong>
          application
        </strong>
         can be downloaded or used from the
        following places:
      
      </p>
       
      <p>
        
        1) downloaded as an add-on (extension) to Firefox:
        
        <a
          href="https://addons.mozilla.org/en-US/firefox/addon/superhero-wallet"
          target="_blank"
        >
          https://addons.mozilla.org/en-US/firefox/addon/superhero-wallet
        </a>
        
        ; to Chrome, Brave and Opera:         
        
        <a
          href="https://chrome.google.com/webstore/detail/superhero/mnhmmkepfddpifjkamaligfeemcbhdne"
          target="_blank"
        >
          https://chrome.google.com/webstore/detail/superhero/mnhmmkepfddpifjkamaligfeemcbhdne
        </a>
        ;
      
      </p>
       
      <p>
        
        2) accessed from any Browser at the address:
        
        <a
          href="https://wallet.superhero.com"
          target="_blank"
        >
          https://wallet.superhero.com
        </a>
        
        ;
      
      </p>
       
      <p>
        
        3) downloaded from Google Play:    
        
        <a
          href="https://play.google.com/store/apps/details?id=com.superhero.cordova"
          target="_blank"
        >
          https://play.google.com/store/apps/details?id=com.superhero.cordova
        </a>
        
        and
      
      </p>
       
      <p>
        
        from App Store:
        
        <a
          href="https://apps.apple.com/us/app/superhero-wallet/id1502786641"
          target="_blank"
        >
          https://apps.apple.com/us/app/superhero-wallet/id1502786641
        </a>
        .
      
      </p>
       
      <p>
        
        If you have any questions regarding this 
        <strong>
          Policy
        </strong>
        , please contact us at
        superherowallet@protonmail.com. If you do not agree to the terms of this
        
        <strong>
          Policy
        </strong>
        , please do not use 
        <strong>
          the application
        </strong>
        . 
      
      </p>
       
      <p>
        
        Each time you use 
        <strong>
          the application
        </strong>
        , the current version of this
        
        <strong>
          Policy
        </strong>
         will apply. The new version of the
        
        <strong>
          Privacy Policy
        </strong>
         becomes effective from the day it is announced publicly on
        
        <strong>
          the application
        </strong>
         unless stated otherwise. Accordingly, when
        
        <strong>
          YOU
        </strong>
         use 
        <strong>
          the application
        </strong>
        , 
        <strong>
          YOU
        </strong>
         should
        check the date of this 
        <strong>
          Policy
        </strong>
         (which appears at the top). If
        
        <strong>
          YOU
        </strong>
         continue to use the 
        <strong>
          application
        </strong>
         after the changes
        have been enforced, 
        <strong>
          We
        </strong>
         shall consider this a given consent and acceptance
        to the modified content. If 
        <strong>
          YOU
        </strong>
         do not agree to the new modifications,
        please contact 
        <strong>
          Us
        </strong>
         for further assistance via the above-mentioned in the
        previous paragraph email address.
      
      </p>
       
      <p>
        
        All abbreviations and definitions of the 
        <strong>
          TERMS
        </strong>
         shall be applicable for
        the present 
        <strong>
          Privacy Policy
        </strong>
        .
      
      </p>
    </li>
     
    <li
      class="second"
    >
      <h3>
        <strong>
          Definitions
        </strong>
      </h3>
       
      <p>
        
        For the purposes of this 
        <strong>
          Privacy Policy
        </strong>
        , the terms have the following
        meaning:
      
      </p>
       
      <ul>
        <li>
          <strong>
            „Data Controller“
          </strong>
           means the person or body which, alone or
          jointly with others, determines the purposes and means of the processing of personal
          data;
        
        </li>
         
        <li>
          <strong>
            „Personal Data“
          </strong>
           means any information relating to an
          identified or identifiable natural person – data subject
          (‘
          <strong>
            USER’
          </strong>
          );
        
        </li>
         
        <li>
          <strong>
            „Processing“
          </strong>
           means any operation or set of operations which
          is performed on personal data;
        
        </li>
         
        <li>
          <strong>
            „Recipient“
          </strong>
           means a natural or legal person, public
          authority, agency or another body, to which the personal data are disclosed, whether a
          third party or not;
        
        </li>
      </ul>
       
      <p>
        <strong>
          „Personal data breach“
        </strong>
         means a breach of security leading to
        the accidental or unlawful destruction, loss, alteration, unauthorized disclosure of, or
        access to, personal data transmitted, stored or otherwise processed.
      
      </p>
    </li>
     
    <li
      class="third"
    >
      <h3>
        <strong>
          Personal data collection disclaimer
        </strong>
      </h3>
       
      <p>
        <strong>
          Please bear in mind that once the information or personal data under any form is
          submitted and written on the Æternity blockchain, it cannot be amended, corrected
          or deleted. Superhero cannot change, restore, delete or amend in any way the
          above-mentioned information and therefore, shall not be held liable in any way for the
          collection of the information on the blockchain.
        </strong>
      </p>
       
      <p>
        <strong>
          The Wallet is a software solution which facilitates the peer-to-peer transfer
          of tokens between USERS and their interaction with Æternity blockchain.
        </strong>
         
        <strong>
          USERS
        </strong>
         understand and agree that 
        <strong>
          Superhero
        </strong>
         does not
        determine the purposes and means of 
        <strong>
          processing
        </strong>
         of
        
        <strong>
          personal data
        </strong>
         and does not conduct any
        
        <strong>
          processing
        </strong>
         activities. Due to the decentralized character of the business
        model, 
        <strong>
          USERS
        </strong>
         are solely responsible for the actions they conduct and the
        information they provide. 
        <strong>
          Superhero 
        </strong>
        does not, independently or with
        others, conduct any operations or set of operations which is performed on
        
        <strong>
          personal data
        </strong>
         or sets of 
        <strong>
          personal data
        </strong>
         in connection to
        the use of the 
        <strong>
          application.
        </strong>
      </p>
       
      <p>
        
         The 
        <strong>
          Wallet
        </strong>
         is a 
        <strong>
          blockchain
        </strong>
         based application on
        which an 
        <strong>
          account address
        </strong>
         is generated or an 
        <strong>
          account
        </strong>
         
        <strong>
          name
        </strong>
         can be claimed through the
        
        <strong>
          Æternity Naming System
        </strong>
         for 
        <strong>
          USER
        </strong>
         identification.
      
      </p>
       
      <p>
        
        The 
        <strong>
          account addresses
        </strong>
         and the 
        <strong>
          names
        </strong>
         can be treated as
        indirect identifiers. An indirect identifier is a value which cannot be used alone to
        identify a data subject, however, could be identifying if combined with other indirect
        identifiers.
      
      </p>
       
      <p>
        <strong>
          The Æternity
        </strong>
         network is a public and permissionless blockchain, in
        which everyone can participate and validate (see definition for
        
        <strong>
          Validator
        </strong>
         in 
        <strong>
          TERMS OF USE
        </strong>
        ).
        
        <strong>
          USERS
        </strong>
         understand and accept that all persons can see in the
        
        <strong>
          Wallet
        </strong>
         and the 
        <strong>
          blockchain
        </strong>
         the indirect identifiers
        related to transactions – namely 
        <strong>
          account addresses
        </strong>
         and
        
        <strong>
          names
        </strong>
         generated via 
        <strong>
          Æternity
        </strong>
         
        <strong>
          Naming System
        </strong>
        . The above-mentioned information might be used to identify
        a natural person. Therefore, 
        <strong>
          USERS
        </strong>
         accept and agree that
        
        <strong>
          Superhero
        </strong>
         does not act in full capacity as
        
        <strong>
          Data Controller
        </strong>
         in the meaning established in Regulation (EU) 2016/679 of
        the European Parliament and of the Council of 27 April 2016 on the protection of natural
        persons with regard to the processing of personal data and on the free movement of such
        data (“
        <strong>
          GDPR
        </strong>
        ”). 
        <strong>
          USERS
        </strong>
         understand and accept
        that by using the open-source blockchain technology incorporated in
        
        <strong>
          the application
        </strong>
        , they provide their personal data- identifiable or
        non-identifiable- to unlimited circle of persons and they bear the risk of these actions.
      
      </p>
       
      <p>
        
        For more information about the 
        <strong>
          account address
        </strong>
         and
        
        <strong>
          name of account
        </strong>
        , please refer to the 
        <strong>
          TERMS
        </strong>
         of the
        application- Article 3- 
        <strong>
          <u>
            USERS IDENTIFICATION.
          </u>
        </strong>
      </p>
       
      <p>
         
      </p>
       
      <p>
        The 
        <strong>
          application
        </strong>
         does not use Cookies.
      </p>
    </li>
     
    <li
      class="fourth"
    >
      <h3>
        <strong>
          USERS personal data collection
        </strong>
      </h3>
       
      <p>
        <strong>
          Superhero
        </strong>
         as the developer of the 
        <strong>
          application
        </strong>
         reserves
        the right to process 
        <strong>
          personal data
        </strong>
         for technical support and maintenance
        purposes.
      
      </p>
       
      <p>
        
        During the use of our 
        <strong>
          application
        </strong>
        , 
        <strong>
          USERS
        </strong>
         may decide to
        contact the team in relation to 
        <strong>
          application
        </strong>
         support, connection problems,
        questions, etc. The collection of the 
        <strong>
          personal data
        </strong>
         is initiated by
        
        <strong>
          USERS
        </strong>
         and they decide what type of 
        <strong>
          personal data
        </strong>
         to
        include in the communication. Moreover, for the provision of support services,
        
        <strong>
          USERS
        </strong>
         might be asked to provide additional information.
      
      </p>
       
      <p>
        
        The legal basis for 
        <strong>
          processing
        </strong>
         is legitimate interest of
        
        <strong>
          Superhero
        </strong>
         – the provision of responses to your
        questions/signals/requests with the purpose of the 
        <strong>
          Wallet
        </strong>
         improvement.
        The retention period is until the final provision of a response to the
        
        <strong>
          USER’s
        </strong>
         signal/question/request.
      
      </p>
    </li>
     
    <li
      class="fifth"
    >
      <h3>
        <strong>
          Storage of personal data:
        </strong>
      </h3>
       
      <p>
        <strong>
          We
        </strong>
         collect and store your 
        <strong>
          personal data
        </strong>
         on the territory
        of the European Economic Area. In case the 
        <strong>
          personal data
        </strong>
         is transferred
        to a country outside the EEA, 
        <strong>
          We
        </strong>
         shall enforce all necessary measures for
        the protection and guaranty of the 
        <strong>
          personal data’s
        </strong>
         safety.
      
      </p>
    </li>
     
    <li
      class="sixth"
    >
      <h3>
        <strong>
          Your rights:
        </strong>
      </h3>
       
      <p>
        <strong>
          YOU
        </strong>
         have the right to:
      </p>
       
      <ul>
        <li>
          
          Request from 
          <strong>
            Superhero 
          </strong>
          access to the
          
          <strong>
            personal data
          </strong>
           that we hold about 
          <strong>
            YOU
          </strong>
           in a portable
          format.
        
        </li>
         
        <li>
          
          Request from 
          <strong>
            Superhero 
          </strong>
          correction of any collected
          
          <strong>
            personal data
          </strong>
          . The information may include only your
          
          <strong>
            personal data
          </strong>
        </li>
         
        <li>
          Receive a copy of your 
          <strong>
            personal data
          </strong>
           in electronic format.
        </li>
         
        <li>
          
          “The right to be forgotten”- 
          <strong>
            YOU
          </strong>
           have the right to request
          the deletion of your 
          <strong>
            personal
          </strong>
           
          <strong>
            data
          </strong>
           at any time where
          the retention of such data infringes relevant legislation (the right is not absolute).
        
        </li>
         
        <li>
          
          Receive information from 
          <strong>
            Us
          </strong>
           about 
          <strong>
            Our
          </strong>
           activities in
          connection to your 
          <strong>
            personal data
          </strong>
          , including the purposes of collection
          and storage, the period of time for storage, the methods of collecting, the presence of
          automated processing.
        
        </li>
         
        <li>
          
          Receive your 
          <strong>
            data
          </strong>
           and transfer them to another
          
          <strong>
            controller
          </strong>
          .
        
        </li>
         
        <li>
          <strong>
            YOU
          </strong>
           have the right to lodge a complaint with a supervisory authority,
          in particular in the Member State of your habitual residence, place of work or place of
          the alleged infringement if 
          <strong>
            YOU
          </strong>
           consider that there is personal data
          breach.
        
        </li>
      </ul>
    </li>
     
    <li
      class="seventh"
    >
      <h3>
        <strong>
          Sharing of Personal Information with Third Parties - Recipients
        </strong>
      </h3>
       
      <p>
        
        We may disclose 
        <strong>
          USERS’
        </strong>
         identifiable personal information to third
        parties – 
        <strong>
          recipients
        </strong>
        , under special circumstances:
      
      </p>
       
      <ol
        class="sharing-terms"
      >
        <li>
          
          to comply with a legal requirement, judicial proceeding, court order, or
          legal process served on 
          <strong>
            Superhero 
          </strong>
          or its affiliates,
        
        </li>
         
        <li>
          
          to investigate a possible crime, such as fraud or identity theft;
        
        </li>
         
        <li>
          
          to Public Authorities in accordance with their legal obligation for the
          exercise of their official mission, such as tax and customs authorities, financial
          investigation units, independent administrative authorities, or financial marker
          authorities responsible for supervision of securities markets;
        
        </li>
         
        <li>
          
          in connection with the sale, purchase, business transition under any
          form, merger, dissolution, reorganization, liquidation of
          
          <strong>
            Superhero
          </strong>
          ; 
          <strong>
            We
          </strong>
           may have to disclose the information
          
          <strong>
            YOU
          </strong>
           have given us to the successor, who is part of the transition,
        
        </li>
         
        <li>
          
          when 
          <strong>
            WE
          </strong>
           believe it is necessary to protect the rights,
          property, or safety of 
          <strong>
            Superhero 
          </strong>
          or other persons, or
        
        </li>
         
        <li>
          
          as otherwise required or permitted by law, including any contractual
          obligations of
          
          <strong>
            Superhero
          </strong>
          .
        
        </li>
      </ol>
    </li>
     
    <li
      class="eighth"
    >
      <h3>
        <strong>
          Children and Privacy
        </strong>
      </h3>
       
      <ul>
        <li>
          <strong>
            Superhero
          </strong>
           does not process information of persons under the age of
          obtaining full legal capacity (in most countries 18 years old) due to the character of
          the 
          <strong>
            Wallet
          </strong>
          .
        
        </li>
         
        <li>
          <strong>
            Superhero
          </strong>
           will immediately delete any
          
          <strong>
            personal data
          </strong>
           referring to persons under the age of full legal
          capacity if 
          <strong>
            Superhero
          </strong>
           receives such information.
        
        </li>
         
        <li>
          
          We are not liable in any way if 
          <strong>
            YOU
          </strong>
           provide false information about
          your age or use the 
          <strong>
            application
          </strong>
           before 
          <strong>
            YOU
          </strong>
           have
          turned the above-mentioned age.
        
        </li>
      </ul>
    </li>
     
    <li
      class="ninth"
    >
      <h3>
        <strong>
          Measures for protection
        </strong>
      </h3>
       
      <p>
        
        We undertake all necessary technological, technical and organizational measures to protect
        your 
        <strong>
          personal data
        </strong>
        . Your 
        <strong>
          personal data
        </strong>
         is stored on
        protected servers with a strictly controlled access.
      
      </p>
       
      <p>
        
        Some of the above-mentioned information is stored in such a form that could not be used to
        identify 
        <strong>
          YOU
        </strong>
         directly.
      
      </p>
    </li>
     
    <li
      class="tenth"
    >
      <h3>
        <strong>
          Breach measures
        </strong>
      </h3>
       
      <p>
        
        In case of 
        <strong>
          breach
        </strong>
         in the software, disruptive interference in the
        
        <strong>
          Wallet
        </strong>
        , the 
        <strong>
          Æternity
        </strong>
         Network, malware, spyware,
        virus attacks and any other harmful cyber-attacks, 
        <strong>
          We
        </strong>
         will undertake
        every possible action in an appropriate and timely manner, to avoid any material or
        non-material damage to 
        <strong>
          USERS
        </strong>
        . As soon as
        
        <strong>
          Superhero
        </strong>
         becomes aware of any 
        <strong>
          breach
        </strong>
        ,
        
        <strong>
          USERS
        </strong>
         and the competent authorities will be notified immediately.
        
        <strong>
          YOU
        </strong>
         may be asked to follow certain instructions for prevention of
        
        <strong>
          breaches
        </strong>
        .
      
      </p>
    </li>
     
    <li
      class="eleventh"
    >
      <h3>
        <strong>
          How Do I contact Æternity?
        </strong>
      </h3>
       
      <p>
        
        To contact us with your questions or comments regarding this 
        <strong>
          Policy
        </strong>
        ,
        please email us at 
        
        <a
          href="mailto:superherowallet@protonmail.com"
        >
          superherowallet@protonmail.com
        </a>
        .
      
      </p>
    </li>
  </ol>
</div>
`;

exports[`Pages TermsOfService 1`] = `
<div
  class="terms-of-service"
>
  <h1
    class="bolder"
  >
    
    TERMS OF USE
  
  </h1>
   
  <p
    class="italic"
  >
    
    The present 
    <b>
      TERMS OF USE
    </b>
     are effective since 9th April 2020.
  
  </p>
   
  <p
    class="italic"
  >
    <b>
      Superhero.com LVC
    </b>
     reserves its right to modify and update these
    
    <b>
      TERMS OF USE
    </b>
     according to the policy and practice of the 
    <b>
      company
    </b>
    . The new
    version of thе 
    <b>
      TERMS OF USE
    </b>
     becomes effective from the day it is announced on
    
    <b>
      Our Superhero Wallet
    </b>
     unless stated otherwise.
  
  </p>
   
  <hr />
   
  <p
    class="bolder"
  >
    
    THE SOFTWARE IS PROVIDED BY SUPERHERO.COM LVC “AS IS” WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
    PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE AUTHORS BE LIABLE FOR ANY
    CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
    ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    SOFTWARE.
  
  </p>
   
  <p>
    
    These 
    <b>
      TERMS OF USE („TERMS“)
    </b>
     apply exclusively for the
    
    <b>
      Superhero Wallet
    </b>
     (hereinafter referred to as the “
    <b>
      Wallet
    </b>
    ” or the
    “
    <b>
      application
    </b>
    ”) and all the content available on the website extension. Please make sure
    that you have carefully read the 
    <b>
      TERMS
    </b>
     before using the 
    <b>
      application
    </b>
    . Otherwise,
    by using it, we consider these actions implicit agreement to the 
    <b>
      TERMS OF USE
    </b>
    . These
    
    <b>
      TERMS OF USE
    </b>
     represent a binding agreement between you, the legal entity you represent
    and the legal entity that registered you (collectively „
    <b>
      YOU
    </b>
    “) and
    
    <b>
      Superhero.com LVC (“Superhero”, “we”, “us”
    </b>
     or 
    <b>
      “our”)
    </b>
     in connection to your use
    of the 
    <b>
      Superhero Wallet application.
    </b>
    .
  
  </p>
   
  <p>
    
    Please, do not use the application provided by 
    <b>
      Superhero
    </b>
    , if you do not agree to the
    
    <b>
      TERMS
    </b>
     applied within this document.
  
  </p>
   
  <p>
    <b>
      WE
    </b>
     preserve our right to modify the 
    <b>
      TERMS
    </b>
     at any time in our sole discretion.
    
    <b>
      USERS
    </b>
     will be notified of such changes by posting information for the new Effective
    Date of the 
    <b>
      TERMS
    </b>
     on the 
    <b>
      application
    </b>
    . 
    <b>
      YOU
    </b>
     may be required to read and
    accept the updated 
    <b>
      TERMS
    </b>
     in order to continue your use of the 
    <b>
      Wallet
    </b>
    . If
    
    <b>
      YOU
    </b>
     continue to use the 
    <b>
      Wallet
    </b>
     after a notification for the amended
    
    <b>
      TERMS
    </b>
    , 
    <b>
      YOU
    </b>
     are agreeing to be bound by the modifications. If you don’t agree to
    be bound by the modified 
    <b>
      TERMS
    </b>
    , then you should discontinue any use of the
    
    <b>
      Wallet
    </b>
    . Please contact 
    <b>
      Superhero
    </b>
     via an email to
    
    <a
      href="mailto:superherowallet@protonmail.com"
    >
      superherowallet@protonmail.com
    </a>
    
    for the provision of information about the steps for termination of your use. Please check the
    Effective Date above to determine if there have been any changes since 
    <b>
      YOU
    </b>
     have last
    reviewed these 
    <b>
      TERMS
    </b>
    .
  
  </p>
   
  <p
    class="italic underline"
  >
    
    Once you agree to the 
    <b>
      TERMS OF USE
    </b>
    , we consider this an explicit consent to the
    following:
  
  </p>
   
</div>
`;
